@@ -15,8 +15,8 @@
 </b>
 
 <test>
- <op name="difference">
-	POLYGON ((-329130.0419608904048800 750774.6372168775415048, -328777.4799999999813735 752676.8399999999674037, -327971.9600000000209548 756636.1199999999953434, -327097.4400000000023283 760580.7199999999720603, -326154.2399999999906868 764509.4799999999813735, -325142.5999999999767169 768421.1600000000325963, -324062.8800000000046566 772314.5999999999767169, -322915.3200000000069849 776188.6400000000139698, -321700.3599999999860302 780042.0000000000000000, -320418.3200000000069849 783873.5999999999767169, -319069.6400000000139698 787682.2399999999906868, -317654.6400000000139698 791466.7600000000093132, -316173.8400000000256114 795226.0000000000000000, -314627.6400000000139698 798958.8399999999674037, -313016.5599999999976717 802664.1199999999953434, -311341.0399999999790452 806340.6800000000512227, -309601.5999999999767169 809987.4799999999813735, -307798.7999999999883585 813603.3599999999860302, -305933.1599999999743886 817187.2399999999906868, -304005.2399999999906868 820738.0000000000000000, -302015.6799999999930151 824254.5600000000558794, -299965.0000000000000000 827735.8800000000046566, -297853.9199999999837019 831180.8800000000046566, -295683.0399999999790452 834588.5200000000186265, -293453.0000000000000000 837957.7199999999720603, -291164.4799999999813735 841287.5200000000186265, -288818.2399999999906868 844576.8399999999674037, -286414.9199999999837019 847824.7600000000093132, -283955.2800000000279397 851030.1999999999534339, -281440.0800000000162981 854192.2399999999906868, -278870.0800000000162981 857309.9200000000419095, -276246.0399999999790452 860382.2399999999906868, -273568.7999999999883585 863408.3199999999487773, -270839.1599999999743886 866387.1999999999534339, -268057.9600000000209548 869318.0000000000000000, -265226.0000000000000000 872199.8000000000465661, -262344.2000000000116415 875031.7199999999720603, -259413.3999999999941792 877812.9599999999627471, -256434.5199999999895226 880542.5999999999767169, -253408.4400000000023283 883219.8399999999674037, -250336.1199999999953434 885843.8399999999674037, -247218.4400000000023283 888413.8800000000046566, -244056.3999999999941792 890929.0799999999580905, -240850.9599999999918509 893388.6800000000512227, -237603.0799999999871943 895792.0000000000000000, -234313.7200000000011642 898138.2800000000279397, -230983.9599999999918509 900426.7600000000093132, -227614.7200000000011642 902656.8000000000465661, -224207.0799999999871943 904827.7199999999720603, -220762.1199999999953434 906938.8000000000465661, -217280.7999999999883585 908989.4399999999441206, -213764.2000000000116415 910979.0400000000372529, -210213.4400000000023283 912906.9200000000419095, -206629.6000000000058208 914772.5999999999767169, -203013.7200000000011642 916575.4000000000232831, -199366.9200000000128057 918314.8399999999674037, -195690.3200000000069849 919990.3599999999860302, -191985.0400000000081491 921601.4399999999441206, -188252.2000000000116415 923147.6400000000139698, -184492.9599999999918509 924628.4399999999441206, -180708.4400000000023283 926043.4000000000232831, -176899.7999999999883585 927392.1199999999953434, -173068.2399999999906868 928674.1600000000325963, -169214.8399999999965075 929889.1199999999953434, -165340.8399999999965075 931036.6400000000139698, -161447.3999999999941792 932116.4000000000232831, -157535.7200000000011642 933128.0400000000372529, -153606.9599999999918509 934071.2399999999906868, -149662.3599999999860302 934945.7600000000093132, -145703.0799999999871943 935751.2800000000279397, -141730.3200000000069849 936487.5600000000558794, -137745.3599999999860302 937154.4399999999441206, -133749.3599999999860302 937751.6400000000139698, -129743.5200000000040745 938279.0000000000000000, -125729.1199999999953434 938736.4000000000232831, -121707.3600000000005821 939123.6400000000139698, -117679.3999999999941792 939440.6400000000139698, -113646.5599999999976717 939687.3199999999487773, -109610.0000000000000000 939863.5600000000558794, -105571.0000000000000000 939969.3199999999487773, -102894.5499781356338644 939992.6649083636002615, 9485.3600000000005821 770763.0000000000000000, -14669.3600000000005821 610548.1199999999953434, -72641.7200000000011642 570054.3599999999860302, -329130.0399999999790452 750774.6400000000139698, -329130.0419608904048800 750774.6372168775415048))
+ <op name="areatest">
+ 1
  </op>
 </test>
 
@@ -46,8 +46,8 @@ POLYGON((742601.541294537 5087772.18101068,742592.428792606
 </b>
 
 <test>
-	<op name="intersection" arg1="A" arg2="B">
-	LINESTRING (742592.4399999999441206 5087767.3600000003352761, 742601.5600000000558794 5087772.2000000001862645)
+	<op name="areatest">
+	1
 	</op>
 </test>
 
@@ -65,8 +65,8 @@ POLYGON ((607216.0000000019790605 2370623.9999982002191246, 608128.0000000019790
 </b>
 
 <test>
-<op name="union" arg1="A" arg2="B">
-POLYGON ((604107.0000000000000000 2370058.0000000000000000, 604264.0000000000000000 2370398.0000000000000000, 604141.0000000000000000 2370769.0000000000000000, 604561.0000000000000000 2370449.0000000000000000, 604940.0000000000000000 2370407.0000000000000000, 605460.0000000000000000 2370793.0000000000000000, 605942.0000000000000000 2370946.0000000000000000, 606364.0000000000000000 2370893.0000000000000000, 606881.0000000000000000 2370989.0000000000000000, 607216.0000000000000000 2370624.0000000000000000, 608128.0000000000000000 2370313.0000000000000000, 608317.0000000000000000 2370102.0000000000000000, 608328.0000000000000000 2369869.0000000000000000, 608644.0000000000000000 2369848.0000000000000000, 608801.0000000000000000 2369193.0000000000000000, 609161.0000000000000000 2369097.0000000000000000, 609161.0000000000000000 2369510.0000000000000000, 609857.0000000000000000 2369499.0000000000000000, 609762.0000000000000000 2369690.0000000000000000, 610796.0000000000000000 2369795.0000000000000000, 611332.0000000000000000 2370098.0000000000000000, 613149.0000000000000000 2370461.0000000000000000, 613613.0000000000000000 2369721.0000000000000000, 613697.0000000000000000 2369268.0000000000000000, 613797.0000000000000000 2368323.0000000000000000, 613643.0000000000000000 2367808.0000000000000000, 613674.0000000000000000 2367406.0000000000000000, 613400.0000000000000000 2367300.0000000000000000, 613200.0000000000000000 2366814.0000000000000000, 613252.0000000000000000 2366475.0000000000000000, 613094.0000000000000000 2366401.0000000000000000, 612695.0000000000000000 2365507.0000000000000000, 612326.0000000000000000 2365403.0000000000000000, 612145.0000000000000000 2365471.0000000000000000, 612061.0000000000000000 2365968.0000000000000000, 611724.0000000000000000 2366169.0000000000000000, 611334.0000000000000000 2366317.0000000000000000, 610743.0000000000000000 2366222.0000000000000000, 610174.0000000000000000 2366306.0000000000000000, 609973.0000000000000000 2367067.0000000000000000, 609073.0000000000000000 2367939.0000000000000000, 609061.0000000000000000 2368333.0000000000000000, 608602.0000000000000000 2368125.0000000000000000, 607980.0000000000000000 2367586.0000000000000000, 607295.0000000000000000 2367063.0000000000000000, 606251.0000000000000000 2366698.0000000000000000, 605456.0000000000000000 2367680.0000000000000000, 605108.0000000000000000 2368378.0000000000000000, 604906.0000000000000000 2369084.0000000000000000, 604191.0000000000000000 2369720.0000000000000000, 604107.0000000000000000 2370058.0000000000000000))
+<op name="areatest">
+1
 </op>
 </test>
 
@@ -84,11 +84,136 @@ POLYGON ((604107.0000000000000000 2370058.0000000000000000, 604264.0000000000000
 </b>
 
 <test>
-<op name="union" arg1="A" arg2="B">
- POLYGON((437763 2016787,438100 2016871,438343 2016533,438501 2015941,438754 2015941,439587 2015423,439819 2015455,439961 2015162,439889 2014812,439862 2014377,439694 2014049,440189 2013182,440411 2012093,440211 2011628,440031 2011532,440147 2011268,439918 2010798,439810 2010613,439727 2009926,439706 2009524,439897 2009235,438465 2009462,438149 2009272,438212 2008965,437558 2009208,434668 2009261,434296 2009722,434936 2010779,435663 2011255,434767 2011984,434682 2012207,434746 2012439,434609 2012572,433788 2012630,433166 2012894,432692 2013317,431668 2013085,431626 2013476,432017 2013878,431817 2014269,431712 2014618,431166 2014907,431174 2015094,430826 2015538,430931 2017229,431049 2018129,430363 2018446,430447 2018837,430838 2019324,431597 2019799,431660 2020106,431498 2020443,432061 2020698,432852 2021301,433169 2021216,433358 2021237,433337 2021301,434215 2021428,434331 2021089,434574 2020836,434553 2020529,434352 2020339,432749 2019271,432654 2019006,433486 2018679,433370 2018097,433950 2018013,434541 2018013,434910 2018340,434963 2018065,434857 2017759,434910 2017526,435121 2017304,435374 2017230,436039 2017251,436418 2017484,437051 2017346,437399 2016818,437763 2016787))
+<op name="areatest">
+1
 </op>
 </test>
 
 </case>
+
+ <case>
+<desc>
+postgis-users/2006-November/013743.html
+</desc>
+<a>
+POLYGON((5417148.108 5658342.603,5417139.016
+5658338.009,5417126.791 5658331.833,5417116.292 5658327.518,5417112.871
+5658325.598,5417110.25 5658324.127,5417106.071 5658321.781,5417104.226
+5658320.745,5417093.266 5658315.008,5417091.265 5658313.961,5417085.335
+5658310.857,5417060.44 5658326.26,5417064.68 5658327.52,5417088.83
+5658336.46,5417088.52 5658337.31,5417102.92 5658342.65,5417103.26
+5658341.83,5417111.76 5658345.51,5417121.662 5658349.583,5417121.878
+5658349.672,5417125.217 5658351.119,5417131.761 5658353.388,5417137.589
+5658356.276,5417142.166 5658359.67,5417146.599 5658364.988,5417151.395
+5658370.641,5417150.853 5658371.392,5417152.59741167
+5658373.52811061,5417154.92 5658376.37,5417155.18955743
+5658376.89699992,5417154.919 5658376.371,5417155.814
+5658378.111,5417157.051 5658380.297,5417158.004 5658382.304,5417159.014
+5658384.47,5417159.775 5658386.619,5417160.629 5658389.278,5417161.5
+5658399.49,5417160.773 5658404.194,5417159.41 5658413.02,5417158.853
+5658414.442,5417153.671 5658427.659,5417153.67051161
+5658427.6586943,5417153.67 5658427.66,5417152.73 5658427.07,5417149.993
+5658436.599,5417148.81 5658439.42,5417149.233 5658439.67,5417148.36
+5658440.81,5417146.41 5658446.6,5417144.321 5658453.127,5417144.32092232
+5658453.13043826,5417154.59 5658458.01,5417154.99551047
+5658455.8409905,5417155.446 5658453.413,5417157.23981414
+5658448.75748237,5417157.22660892 5658448.57861162,5417157.22660849
+5658448.57860592,5417157.22660865 5658448.57860812,5417157.128
+5658447.265,5417157.64950997 5658446.06368023,5417157.64950961
+5658446.06368108,5417158.314 5658444.533,5417172.322
+5658417.957,5417174.99 5658418.57,5417175.23 5658417.74,5417176.696
+5658412.61,5417177.875 5658408.488,5417178.76 5658405.39,5417178.1
+5658393.55,5417178.08 5658393.36,5417177.11 5658384.95,5417178.151
+5658384.915,5417178.14836289 5658384.91508866,5417178.12
+5658384.83,5417177.91415246 5658383.81114117,5417176.927
+5658378.944,5417176.603 5658377.341,5417176.73975922
+5658378.01762048,5417176.6 5658377.34,5417176.51210558
+5658376.89535766,5417176.428 5658376.483,5417175.235
+5658370.602,5417171.577 5658362.886,5417170.762 5658360.107,5417168.522
+5658357.989,5417166.042 5658355.047,5417164.137 5658352.264,5417162.642
+5658351.593,5417160.702 5658350.843,5417160.05417889
+5658350.5823586,5417158.82 5658350.09,5417158.82103105
+5658350.0862195,5417159.50373263 5658350.36089455,5417158.818
+5658350.085,5417159.055 5658349.214,5417155.754
+5658347.679,5417156.78066321 5658348.15640928,5417155.7525011
+5658347.6811561,5417155.161 5658348.532,5417149.028
+5658343.237,5417152.26877967 5658346.03496647,5417149.03
+5658343.24,5417148.78133339 5658343.06701453,5417148.108
+5658342.603))
+</a>
+
+<b>
+POLYGON((5417148.36 5658440.81,5417149.233
+5658439.67,5417148.81 5658439.42,5417149.993 5658436.599,5417152.73
+5658427.07,5417153.67 5658427.66,5417153.67051161
+5658427.6586943,5417153.671 5658427.659,5417158.853
+5658414.442,5417159.41 5658413.02,5417160.773 5658404.194,5417161.5
+5658399.49,5417160.63 5658389.28,5417159.78 5658386.62,5417159.366239
+5658385.46469333,5417159.014 5658384.47,5417158.004
+5658382.304,5417157.051 5658380.297,5417155.814
+5658378.111,5417155.18955747 5658376.897,5417154.92
+5658376.37,5417152.59740379 5658373.52810095,5417150.853
+5658371.392,5417151.13020611 5658371.00790076,5417151.4
+5658370.64,5417147.11100598 5658365.59149663,5417146.599
+5658364.988,5417145.96673439 5658364.22950947,5417142.17
+5658359.67,5417139.98754716 5658358.05460369,5417137.589
+5658356.276,5417131.761 5658353.388,5417125.33011568
+5658351.15822058,5417125.22 5658351.12,5417121.88 5658349.67,5417121.66
+5658349.58,5417111.76 5658345.51,5417103.26 5658341.83,5417102.92
+5658342.65,5417088.52 5658337.31,5417088.83 5658336.46,5417064.68
+5658327.52,5417060.44 5658326.26,5417085.34 5658310.86,5417085.90750076
+5658311.15666987,5417091.265 5658313.961,5417093.266
+5658315.008,5417093.61266829 5658315.18946314,5417104.23
+5658320.75,5417105.81727304 5658321.63852784,5417106.071
+5658321.781,5417106.60319005 5658322.07975996,5417110.25
+5658324.13,5417112.87 5658325.6,5417116.29 5658327.52,5417121.76604303
+5658329.76778528,5417126.791 5658331.833,5417139.016
+5658338.009,5417148.108 5658342.603,5417148.78133333
+5658343.06701449,5417149.03 5658343.24,5417152.26878253
+5658346.03496893,5417155.161 5658348.532,5417155.7525011
+5658347.6811561,5417156.78066337 5658348.15640935,5417159.055
+5658349.214,5417158.818 5658350.085,5417158.82103105
+5658350.0862195,5417158.82 5658350.09,5417160.0541792
+5658350.58235872,5417160.702 5658350.843,5417162.642
+5658351.593,5417164.137 5658352.264,5417165.25343486
+5658353.89499119,5417166.04 5658355.05,5417168.52 5658357.99,5417170.76
+5658360.11,5417171.26171711 5658361.81094338,5417171.577
+5658362.886,5417175.235 5658370.602,5417176.428
+5658376.483,5417176.51210558 5658376.89535766,5417176.6
+5658377.34,5417176.73975924 5658378.01762057,5417176.927
+5658378.944,5417177.91415134 5658383.81113564,5417178.12
+5658384.83,5417178.14836289 5658384.91508866,5417177.11
+5658384.95,5417178.08 5658393.36,5417178.1 5658393.55,5417178.76
+5658405.39,5417177.875 5658408.488,5417176.696 5658412.61,5417175.23
+5658417.74,5417174.99 5658418.57,5417172.322
+5658417.957,5417172.32037372 5658417.96008538,5417172.32
+5658417.96,5417158.31 5658444.53,5417157.64951003
+5658446.06368011,5417157.128 5658447.265,5417157.22660867
+5658448.5786084,5417157.23981414 5658448.75748238,5417155.446
+5658453.413,5417154.99551072 5658455.84098918,5417154.59
+5658458.01,5417144.32092232 5658453.13043826,5417144.321
+5658453.127,5417146.41 5658446.6,5417148.36 5658440.81))
+</b>
+
+<test>
+<op name="isValid" arg1="A">
+true
+</op>
+</test>
+
+<test>
+<op name="isValid" arg1="B">
+true
+</op>
+</test>
+
+<test>
+<op name="areatest">
+1
+</op>
+</test>
+
+</case>
+
 
 </run>
